2009-03-13 08:54  rsbivand

	* R/bin_link.R, inst/CITATION: readRAST6 checks

2009-02-05 19:38  rsbivand

	* inst/CITATION: tidy

2009-02-05 19:35  rsbivand

	* DESCRIPTION, inst/CITATION, ChangeLog: tidy

2009-01-11 21:47  rsbivand

	* DESCRIPTION, inst/ChangeLog, ChangeLog: tidying readRAST6
	  messages

2009-01-11 20:41  rsbivand

	* R/bin_link.R, ChangeLog: tidying readRAST6 messages

2009-01-11 16:39  rsbivand

	* R/bin_link.R, ChangeLog, inst/ChangeLog: tidying readRAST6
	  messages

2009-01-10 20:43  rsbivand

	* ChangeLog, DESCRIPTION, R/bin_link.R, R/spgrass6.R,
	  R/vect_link.R, inst/ChangeLog, man/readRAST6.Rd,
	  man/readVECT6.Rd: use g.findfile to autodetect mapset

2008-11-13 13:35  rsbivand

	* ChangeLog, inst/CITATION, inst/ChangeLog: citations

2008-11-13 12:34  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/readRAST6.Rd, man/readVECT6.Rd:
	  cygwin needs .exe from GRASS 6.3

2008-11-13 12:08  rsbivand

	* R/zzz.R: cygwin refresh - no temp flush

2008-11-13 11:28  rsbivand

	* DESCRIPTION, R/zzz.R, ChangeLog, inst/ChangeLog: banner version
	  and location

2008-10-17 09:01  rsbivand

	* DESCRIPTION, man/readVECT6.Rd: vector NA

2008-10-02 16:44  rsbivand

	* R/bin_link.R, man/readRAST6.Rd: overwrite

2008-09-30 13:24  rsbivand

	* DESCRIPTION, R/bin_link.R: NODATA fix?

2008-09-23 19:54  rsbivand

	* ChangeLog, R/bin_link.R, inst/ChangeLog: GDAL readRAST6

2008-09-23 11:01  rsbivand

	* R/bin_link.R, man/readRAST6.Rd, DESCRIPTION: writeRAST6 GDAL

2008-09-18 22:54  rsbivand

	* DESCRIPTION, R/bin_link.R, man/readRAST6.Rd: gdal in readRAST6

2008-08-07 19:22  rsbivand

	* R/bin_link.R: NULL raster handling

2008-08-07 19:02  rsbivand

	* ChangeLog, DESCRIPTION, inst/ChangeLog: NULL raster handling

2008-08-01 18:49  rsbivand

	* R/bin_link.R: all NULL readRAST6

2008-06-27 08:20  rsbivand

	* ChangeLog, inst/ChangeLog: preparing for plugin=NULL default

2008-06-27 08:15  rsbivand

	* R/: bin_link.R, zzz.R: preparing for plugin=NULL default
