@@ -1,13 +1,13 @@
 Package: spgrass6
-Version: 0.5-19
-Date: 2009-02-14
+Version: 0.6-1
+Date: 2009-04-01
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
 Description: Interpreted interface between GRASS 6 geographical 
     information system and R, based on starting R from within the GRASS 
     environment.
-Depends: R (>= 2.4), sp (>= 0.9), rgdal (>= 0.5.26)
+Depends: R (>= 2.4), sp (>= 0.9), rgdal (>= 0.5.26), XML
 SystemRequirements: GRASS (>= 6.3)
 License: GPL (>= 2)
 URL: http://grass.osgeo.org/
